# classifier_pytorch

./: .gitignore  README.md  backbone.py  checkpoint  loss.py  predict.py  result.xml  train.ipynb  train.py  trainv2.py
classify/: __init__.py
classify/backbone/: FeatherNet.py  __init__.py  autoencoder.py  back.py  baseline_bn_drop.py  baseline_channels.py  baseline_depth.py  baseline_stride.py  darknet.py  mb_tiny.py  mobilenet.py
classify/backbone/modeling/: attention.py  loss.py  rfb.py
classify/config/: __init__.py  defaults.yaml
classify/datasets/: GHIMdataset.py  builder.py  normal.py  transforms.py
classify/deploy/: classifier.py
classify/engine/: defaults.py
classify/utils/: collect_env.py  misc.py
configs/: defaults.yaml  helmet.py  helmet.yml  test.py  water.py  x-ray.py
configs/helmet/: helmet.py
configs/spoof/: spoof.py  spoof_AllconvNet.py  spoof_FeatherNetB.py  spoof_ir_mbtinyrfb.py  spoof_mbtinyrfb.py  spoof_mobilenet_v2.py
datasets/: extra_aug.py  folder.py  img_aug.py  official.py  train_val_split.py  x-ray
datasets/helmet/: extract.py  filter.py  split_file.py  train_val_split.py
datasets/open_image/: temp_script.py
prj_spoof_ncnn/: CMakeLists.txt  README.md  classify.param  compare.cpp  infer_classifier_on_image.cpp  infer_classifier_on_video.cpp  infer_classify_on_image.cpp  infer_classify_on_video.cpp  infer_det_classifier_on_image.cpp  infer_det_classifier_on_video.cpp  infer_det_classify_on_image.cpp  infer_det_classify_on_video.cpp  infer_det_on_video.cpp  jni.cpp  main.cpp  scale_test.cpp  video_player.cpp
prj_spoof_ncnn/arcface/: arcface.cpp  arcface.h  base.cpp  base.h  interface.cpp  mtcnn.cpp
prj_spoof_ncnn/classify/: classifier.cpp  classifier.h  classify.h  classify.id.h  interface.cpp  interface.h
test/: draw.py  loss.py
tools/: __init__.py  aug_img.py  builder.py  files.py  infer_det_classify_on_video.py  infer_on_image.py  infer_on_video.py  misc.py  module.py  onnx2ncnn.sh  pt2onnx.py  split_file.py  split_video.py
tools/face/: download_image.py  preprocess_face.py
